--- a/001-quickstart/app.csproj
+++ b/001-quickstart/app.csproj
@@ -7,5 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.*" />
   </ItemGroup>
 </Project>
